base/apps/media/readarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: readarr
  namespace: media
  labels:
    app: readarr
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: readarr
