base/apps/media/readarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: readarr.internal
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Readarr
    gethomepage.dev/icon: readarr.png
    gethomepage.dev/description: Book management
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - readarr.internal
      secretName: readarr-tls
  rules:
    - host: readarr.internal
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  number: 8787
